@@ -1436,6 +1436,11 @@ test filename-16.17 {windows specific globbing} -constraints {win} -body {
 	[glob -nocomplain -tails -dir C: *]
 } -match compareWords -result equal
 
+# Put the working directory back now that we're done with globbing in C:/
+if {[testConstraint win]} {
+    cd $oldDir
+}
+
 test filename-17.1 {windows specific special files} {testsetplatform} {
     testsetplatform win
     list [file pathtype com1] [file pathtype con] [file pathtype lpt3] \
@@ -1543,6 +1548,8 @@ test fileName-20.6 {Bug 2837800} -setup {
 } -result {}
 
 test fileName-20.7 {Bug 2806250} -setup {
+    set savewd [pwd]
+    cd [temporaryDirectory]
     set d [makeDirectory isolate]
     makeFile {} ./~test $d
 } -body {
@@ -1550,9 +1557,12 @@ test fileName-20.7 {Bug 2806250} -setup {
 } -cleanup {
     removeFile ./~test $d
     removeDirectory isolate
+    cd $savewd
 } -result 1
 
 test fileName-20.8 {Bug 2806250} -setup {
+    set savewd [pwd]
+    cd [temporaryDirectory]
     set d [makeDirectory isolate]
     makeFile {} ./~test $d
 } -body {
@@ -1560,6 +1570,7 @@ test fileName-20.8 {Bug 2806250} -setup {
 } -cleanup {
     removeFile ./~test $d
     removeDirectory isolate
+    cd $savewd
 } -result ./~test
 
 test fileName-20.9 {} -setup {
